--- a/app/views/items/edit.html.haml
+++ b/app/views/items/edit.html.haml
@@ -70,21 +70,11 @@
                   %span.required ※必須
                   .category-wrapper-box
                     #category-select
-                      -# = f.select :parent_name, options_for_select(@category_parent_array.map{|parent_hash|}, {selected:@item.category.parent.parent.name}, { class: 'new-wrapper__main__input-select select-parent', id: 'select-parent'}
+                      
                       = f.select :child_id, options_for_select(@category_parent_array.map{|parent_hash| [parent_hash.name, parent_hash.id, {data:{category: parent_hash.id}}]}, {prompt: "指定なし", selected: @item.category.parent.parent.id}),{}, {class: 'new-wrapper__main__input-select select-parent', id: 'select-parent'}
                       = f.select :child_id, options_for_select(@category_children_array.map{|child_hash| [child_hash.name, child_hash.id, {data:{category: child_hash.id}}]}, {prompt: "指定なし", selected: @item.category.parent.id}),{}, {class: 'new-wrapper__main__input-select select-child', id: 'select-parent'}
                       = f.select :category_id, options_for_select(@category_grandchildren_array.map{|grandchild_hash| [grandchild_hash.name, grandchild_hash.id, {data:{category: grandchild_hash.id}}]}, {prompt: "指定なし", selected: @item.category.id}),{}, {class: 'new-wrapper__main__input-select select-grandchild', id: 'item_category_id'}
-                      -# -# .category-wrapper-select
-                      -# -#   .category-wrapper-select__box
-                      -#     = f.select :parent_name, @category_parent_array, {selected:@item.category.parent.parent.name}, { class: 'new-wrapper__main__input-select select-parent', id: 'parent_category'}
-                      -# -# .category-wrapper-select#children_wrapper
-                      -# -#   .category-wrapper-select__box
-                      -#     = f.select :child_id, options_for_select(@category_children_array.map{|child_hash| [child_hash.name, child_hash.id, {data:{category: child_hash.id}}]}, {prompt: "指定なし", selected: @item.category.parent.id}),{}, {class: 'new-wrapper__main__input-select select-child', id: 'child_category'}
-                      -# .category-wrapper-select#grandchildren_wrapper
-                      -#   .category-wrapper-select__box
-                      -#     = f.select :category_id, options_for_select(@category_grandchildren_array.map{|grandchild_hash| [grandchild_hash.name, grandchild_hash.id, {data:{category: grandchild_hash.id}}]}, {prompt: "指定なし", selected: @item.category.id}),{}, {class: 'new-wrapper__main__input-select select-grandchild', id: 'grandchild_category'}
-                
-              
+                      
             
               .status-wrapper
                 .status-text
@@ -151,7 +141,8 @@
                 .price-box__set__mark
                   ¥
                 .price-box__set__price-input
-                  = f.number_field :price, class: "pri", placeholder: 0, value: '', required: "required", id: "item_price"
+                  = f.number_field :price, class: "pri", placeholder: 0, value: @item.price, required: "required", id: "item_price"
+                    
               .price-box__message
                 -# 300以上9999999以下で入力してください
               .price-box__fee-box
