--- a/app/views/items/_footer.html.haml
+++ b/app/views/items/_footer.html.haml
@@ -60,4 +60,4 @@
   .p-btn__text
     出品する
   .p-btn__icon
-    = link_to image_tag("icon_camera.png", class: "tag"), new_item_path
+    = link_to image_tag("icon_camera.png", class: "tag"), new_item_path, data: {"turbolinks" => false}
